--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html data-build-version="__VERSION__" manifest="__MANIFEST__">
+<html>
     <head>
         <title>Boilerplate</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
